.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Lookup_Rollup_Filter__c.object
<CustomObject>
    <description>Contains the filter criteria for Roll-Up summary fields</description>
    <fields>
        <fullName>xcdhcm__Filter_ID__c</fullName>
        <label>Filter ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Filter_field__c</fullName>
        <label>Filter field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Filter_value__c</fullName>
        <label>Filter value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Lookup_Rollup_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Rollup Summary</label>
        <referenceTo>xcdhcm__Lookup_Rollup_Summary__c</referenceTo>
        <relationshipLabel>Lookup Rollup Filters</relationshipLabel>
        <relationshipName>Lookup_Rollup_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Module__c</fullName>
        <description>Used to see which rollups are used in which modules. See field on Summary for details</description>
        <formula>xcdhcm__Lookup_Rollup_Summary__r.xcdhcm__Module__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lookup Rollup Filter</label>
    <nameField>
        <displayFormat>Filter-{00}</displayFormat>
        <label>Lookup Rollup Filter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Rollup Filters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>